--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ h2 {
 	align-items: center;
 	width: 100%;
 	height: 100%;
+	position: relative;
 }
 .active {
 	display: flex;
@@ -95,4 +96,35 @@ h2 {
 }
 .score {
 	right: 140px;
+}
+.insect {
+	width: 50px;
+	height: 50px;
+	position: absolute;
+}
+.insect img {
+	width: 100%;
+	height: 100%;
+}
+.playField {
+	border: 2px solid red;
+	height: 90%;
+	width: 100vw;
+	margin-bottom: 0;
+	padding-bottom: 0;
+	margin-top: 4%;
+	position: relative;
+}
+.message {
+	position: absolute;
+	top: 10%;
+	left: 50%;
+	transform: translateX(-50%);
+	width: 400px;
+	color: aliceblue;
+	background-color: red;
+	height: 100px;
+	z-index: 21;
+	text-align: center;
+	border-radius: 10px;
 }
